# -cpptoolkit-utest

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  fail_test.cpp  fixture_test.cpp  main.cpp  t.cpp  test.cpp
include/cpptoolkit/test/: core.h  header.h  macros.h  main_macros.h  run_all_macros.h  utest.h
include/cpptoolkit/test/tool/: BaseFixture.h  TestFailException.h  base_fixture.h  base_test.h  common.h  test_fail_exception.h
include/cpptoolkit/utest/: macros.h  utest.h
include/cpptoolkit/utest/tool/: TestFailException.h
src/: common.cpp  core.cpp  utest.cpp
